--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,7 +2,14 @@
 security:
     providers:
         users_in_memory:
-            memory: ~
+            memory:
+                users:
+                    ryan:
+                        password: ryanpass
+                        roles: 'ROLE_USER'
+                    admin:
+                        password: kitten
+                        roles: 'ROLE_ADMIN'
 
     firewalls:
         dev:
@@ -14,7 +21,9 @@ security:
             http_basic: ~
             provider: users_in_memory
 
-
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+        
     access_control:
         # require ROLE_ADMIN for /admin*
         - { path: '^/hello', roles: ROLE_ADMIN }    
