1.C) Encoding the User’s Password

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,10 +5,10 @@ security:
             memory:
                 users:
                     ryan:
-                        password: ryanpass
+                        password: $2y$12$ShpvcXP/cYcxuAAK9ClIuOIE.GVYf3Z7qpVPjOeV3FfomwFikkVty #ryanpass
                         roles: 'ROLE_USER'
                     admin:
-                        password: kitten
+                        password: $2y$12$AVSEZz0F.M0y4fXpmL77xuJTymm3WOw6KCVfwfKCxP7RDomzUwewO  #kitten
                         roles: 'ROLE_ADMIN'
 
     firewalls:
@@ -22,8 +22,10 @@ security:
             provider: users_in_memory
 
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-        
+        Symfony\Component\Security\Core\User\User:
+            algorithm: bcrypt
+            cost: 12
+
     access_control:
         # require ROLE_ADMIN for /admin*
         - { path: '^/hello', roles: ROLE_ADMIN }    
