--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,7 +43,7 @@ security:
                 # The route name the user can go to in order to logout
                 path: security_logout
                 # The name of the route to redirect to after logging out
-                target: homepage
+                target: /
 
     encoders:
         AppBundle\Entity\User: bcrypt
